fix(profile): resolve pace instead of duration

--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -153,8 +153,8 @@
           </div>
 
           <div class="text-soft text-sm font-semibold inline-flex items-center gap-1">
-            <%= inline_svg_tag 'icons/speedometer-filled.svg', class: 'size-3.5 shrink-0' %>
-            <span class="whitespace-nowrap"><%= clock_time_display longest_run.pace %> <span class="font-normal">/mi</span></span>
+            <%= inline_svg_tag 'icons/clock-filled.svg', class: 'size-3.5 shrink-0' %>
+            <span class="whitespace-nowrap"><%= clock_time_display longest_run.duration %></span>
           </div>
         </div>
 
