fix(streak_cards): resolve wrong user being used for streak cards

--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -10,10 +10,10 @@
 
   <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
     <!-- Current Streak Card -->
-    <%= render 'shared/user_current_streak_card', user: current_user %>
+    <%= render 'shared/user_current_streak_card', user: user %>
 
     <!-- Record Streak Card -->
-    <%= render 'shared/user_record_streak_card', user: current_user %>
+    <%= render 'shared/user_record_streak_card', user: user %>
 
     <!-- Total Miles Card -->
     <div class="card">
