--- a/app/views/pinned_pages/_list.html.erb
+++ b/app/views/pinned_pages/_list.html.erb
@@ -22,9 +22,9 @@
 
               <% if member && team %>
                 <% if current_page?(team_member_path(team, member)) %>
-                  <%= inline_svg_tag 'icons/user-filled.svg', class: 'size-4.5 dark:group-focus:text-white' %>
+                  <%= inline_svg_tag 'icons/user-group-filled.svg', class: 'size-4.5 dark:group-focus:text-white' %>
                 <% else %>
-                  <%= inline_svg_tag 'icons/user.svg', class: 'size-4.5 dark:group-focus:text-white motion-safe:group-hover:pulse-hover-animation motion-safe:group-focus:pulse-hover-animation' %>
+                  <%= inline_svg_tag 'icons/user-group.svg', class: 'size-4.5 dark:group-focus:text-white motion-safe:group-hover:pulse-hover-animation motion-safe:group-focus:pulse-hover-animation' %>
                 <% end %>
               <% end %>
 
