--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -9,22 +9,46 @@
       </div>
     </div>
 
-    <div class="flex flex-wrap items-center justify-center gap-x-3 gap-y-1.5 mx-auto">
-      <h1 class="heading"><%= @member.default_name %></h1>
-      <span class="size-1.5 rounded-full bg-slate-900 dark:bg-slate-100"></span>
-      <p class="heading"><%= @team.name %></p>
-    </div>
-
+    <h1 class="heading"><%= @member.default_name %></h1>
     <% if @member.display_name.present? %>
       <p class="mt-1 text-soft text-sm"><%= @member.username %></p>
     <% elsif @member == current_user %>
       <p class="mt-1 text-sm">
-        <%= link_to 'Add a display name to your profile', edit_user_registration_path, class: 'text-sm text-soft hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-200' %>
+        <%= link_to 'Add a display name to your profile', edit_user_registration_path, class: 'italic text-sm text-soft hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-200' %>
       </p>
     <% end %>
 
+    <div class="mt-3 text-soft text-sm inline-flex items-center gap-1.5">
+      Joined
+      <span class="inline-flex items-center gap-0.5 mr-px whitespace-nowrap font-semibold text-light">
+        <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-3.5 shrink-0' %>
+        <%= pretty_date(@member.created_at, date_style: :absolute, month_format: :short) %>
+      </span>
+
+      <span class="bg-slate-500 rounded-full size-0.5 shrink-0"></span>
+
+      <span class="inline-flex items-center whitespace-nowrap font-semibold text-light">
+        <%= inline_svg_tag 'icons/hashtag-filled.svg', class: 'size-3 shrink-0 text-soft' %>
+        <%= number_with_delimiter @member.id %>
+      </span>
+    </div>
+
+    <div class="mt-3 text-soft text-sm">
+      <%= @member.owns?(@team) ? 'Coach' : 'Member' %>
+      of
+      <span class="whitespace-nowrap font-semibold mx-0.5 text-light">
+        <%= inline_svg_tag 'icons/team-filled.svg', class: 'inline mb-0.5 size-3.5' %>
+        <%= @team.name %>
+      </span>
+      since
+      <span class="whitespace-nowrap font-semibold mx-0.5 text-light">
+        <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'inline mb-0.5 size-3.5' %>
+        <%= pretty_date(@team_membership.created_at, date_style: :absolute, month_format: :short) %>
+      </span>
+    </div>
+
     <p class="mt-4 text-center text-sm">
-      <%= link_to "View #{@team.name}", @team, class: 'btn-link' %>
+      <%= link_to "View #{@team.name}", @team, class: 'btn-link text-sm' %>
     </p>
   </div>
 
