--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,24 @@
       <p class="mt-1 text-soft text-sm"><%= @user.username %></p>
     <% elsif @user == current_user %>
       <p class="mt-1 text-sm">
-        <%= link_to 'Add a display name to your profile', edit_user_registration_path, class: 'text-sm text-soft hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-200' %>
+        <%= link_to 'Add a display name to your profile', edit_user_registration_path, class: 'italic text-sm text-soft hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-200' %>
       </p>
     <% end %>
+
+    <div class="mt-3 text-soft text-sm inline-flex items-center gap-1.5">
+      Joined
+      <span class="inline-flex items-center gap-0.5 mr-px whitespace-nowrap font-semibold text-light">
+        <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-3.5 shrink-0' %>
+        <%= pretty_date(@user.created_at, date_style: :absolute, month_format: :short) %>
+      </span>
+
+      <span class="bg-slate-500 rounded-full size-0.5 shrink-0"></span>
+
+      <span class="inline-flex items-center whitespace-nowrap font-semibold text-light">
+        <%= inline_svg_tag 'icons/hashtag-filled.svg', class: 'size-3 shrink-0 text-soft' %>
+        <%= number_with_delimiter @user.id %>
+      </span>
+    </div>
   </div>
 
   <div class="relative flex items-center mb-6">
