--- a/app/views/teams/show/_member.html.erb
+++ b/app/views/teams/show/_member.html.erb
@@ -65,13 +65,13 @@
 
   <div class="pt-4 border-t dark:border-slate-700 flex items-end justify-between">
     <div class="flex items-start gap-1.5 flex-1">
-      <%= inline_svg_tag 'icons/user-group.svg', class: 'size-4 text-soft shrink-0' %>
+      <%= inline_svg_tag 'icons/user-group-filled.svg', class: 'size-3.5 text-soft shrink-0' %>
       <p class="text-soft text-xs">
         <% if member.owns?(team) %>
           <%= "Coach of #{team.name}" %>
         <% else %>
           <% team_membership = member.team_memberships.find_by(team: team) %>
-          <%= "Member since #{pretty_date(team_membership.created_at.to_date, date_style: :absolute)}" %>
+          <%= "Member since #{pretty_date(team_membership.created_at, date_style: :absolute, month_format: :short)}" %>
         <% end %>
       </p>
     </div>
