--- a/app/views/teams/show/_rankings_table.html.erb
+++ b/app/views/teams/show/_rankings_table.html.erb
@@ -59,7 +59,7 @@
               <div class="flex items-center">
                 <span class="mr-4 -ml-1 font-mono row-number"></span>
                 <%= link_to team_member_path(team, data[:member]), data: { turbo: false }, class: 'group flex gap-2 items-center mr-auto' do %>
-                  <%= render 'shared/user_photo', user: data[:member], size: :xs, icon_background: :darker %>
+                  <%= render 'shared/user_photo', user: data[:member], size: :thumb %>
 
                   <div class="flex flex-col-reverse">
                     <p class="transition duration-200 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= data[:member].default_name %></p>
