--- a/app/views/pinned_pages/_delete_page_modal.html.erb
+++ b/app/views/pinned_pages/_delete_page_modal.html.erb
@@ -16,7 +16,7 @@
 >
   <div class="flex flex-col space-y-1.5 text-center sm:text-left">
     <h2 class="text-lg font-semibold leading-none tracking-tight">Unpin Shortcut?</h2>
-    <p class="text-soft text-sm">Are you sure you want to unpin your shortcut to <span class="font-bold"><%= page.title %></span>? This action cannot be undone.</p>
+    <p class="text-soft text-sm">Are you sure you want to unpin your shortcut to <span class="font-bold"><%= page.title %></span>?</p>
   </div>
 
   <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
