--- a/app/views/pinned_pages/manage.html.erb
+++ b/app/views/pinned_pages/manage.html.erb
@@ -18,28 +18,28 @@
     <ul
       data-controller="pinned-pages-reorder"
       data-pinned-pages-reorder-target="list"
-      class="my-6 space-y-3"
+      class="my-6 space-y-2 sm:space-y-3"
     >
       <% @pinned_pages.each do |page| %>
         <li
           data-id="<%= page.id %>"
-          class="flex items-center gap-2 p-1 border rounded-lg shadow-md bg-slate-50 dark:bg-slate-700/80 dark:shadow-none dark:border-slate-700"
+          class="flex items-center gap-1.5 px-1.5 max-sm:pl-1 py-0.5 sm:py-1 border rounded-lg bg-white dark:bg-slate-700/80 shadow dark:shadow-none dark:border-slate-700"
         >
+          <div class="drag-handle p-1.5 cursor-grab shrink-0 max-sm:-mr-1">
+            <%= inline_svg_tag 'icons/drag-handle.svg', class: 'size-4 sm:size-5 text-soft' %>
+          </div>
+
           <%= f.text_field "pinned_pages[#{page.id}][title]", value: page.title, placeholder: page.title, class: 'form-input' %>
 
           <button type="button" data-action="mousedown->modal#open" data-modal-id="deletePage_<%= page.id %>" class="btn p-1.5 text-rose-600 dark:text-rose-500 hover:bg-rose-100 dark:hover:bg-rose-900/80 hover:text-rose-700 dark:hover:text-rose-300 shrink-0">
-            <%= inline_svg_tag 'icons/unpin.svg', class: 'size-3.5 sm:size-5' %>
+            <%= inline_svg_tag 'icons/unpin.svg', class: 'size-4 sm:size-5' %>
             <span class="sr-only">Unpin shortcut</span>
           </button>
 
           <%= link_to page.page_url, target: :_blank, class: 'btn btn-transparent p-1.5 shrink-0' do %>
-            <%= inline_svg_tag 'icons/external-link.svg', class: 'size-3.5 sm:size-5' %>
+            <%= inline_svg_tag 'icons/external-link.svg', class: 'size-4 sm:size-5' %>
             <span class="sr-only">View page</span>
           <% end %>
-
-          <div class="drag-handle p-1.5 cursor-grab shrink-0">
-            <%= inline_svg_tag 'icons/drag-handle.svg', class: 'size-4 sm:size-5' %>
-          </div>
         </li>
       <% end %>
 
