style(animation): change animation type for member icon

--- a/app/views/pinned_pages/_list.html.erb
+++ b/app/views/pinned_pages/_list.html.erb
@@ -24,7 +24,7 @@
                 <% if current_page?(team_member_path(team, member)) %>
                   <%= inline_svg_tag 'icons/user-group-filled.svg', class: 'size-4.5 dark:group-focus:text-white' %>
                 <% else %>
-                  <%= inline_svg_tag 'icons/user-group.svg', class: 'size-4.5 dark:group-focus:text-white motion-safe:group-hover:pulse-hover-animation motion-safe:group-focus:pulse-hover-animation' %>
+                  <%= inline_svg_tag 'icons/user-group.svg', class: 'size-4.5 dark:group-focus:text-white motion-safe:group-hover:gelatine-animation motion-safe:group-focus:gelatine-animation' %>
                 <% end %>
               <% end %>
 
