style(profile): change hashtag icon color to same as text

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
       <span class="bg-slate-500 rounded-full size-0.5 shrink-0"></span>
 
       <span class="inline-flex items-center whitespace-nowrap font-semibold text-light">
-        <%= inline_svg_tag 'icons/hashtag-filled.svg', class: 'size-3 shrink-0 text-soft' %>
+        <%= inline_svg_tag 'icons/hashtag-filled.svg', class: 'size-3 shrink-0' %>
         <%= number_with_delimiter @user.id %>
       </span>
     </div>
