--- a/app/views/shared/_user_current_streak_card.html.erb
+++ b/app/views/shared/_user_current_streak_card.html.erb
@@ -12,9 +12,9 @@
     <%= streak %>
     <span class="text-base font-normal text-soft"><%= 'day'.pluralize(streak) %></span>
   </p>
-  <p class="mt-2 mb-4 text-soft text-sm">
+  <div class="mt-2 mb-4">
     <% if streak.zero? %>
-      No current streak recorded.
+      <p class="text-soft text-sm">No current streak recorded.</p>
     <% elsif start_date == end_date %>
       <div class="text-soft text-sm font-semibold inline-flex items-center gap-1">
         <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-3.5 shrink-0' %>
@@ -26,7 +26,7 @@
         <span class="whitespace-nowrap"><%= pretty_date(start_date, month_format: :short, include_year: Date.current.year != start_date.year) %> &ndash; <%= pretty_date(end_date, month_format: :short, include_year: Date.current.year != end_date.year) %></span>
       </div>
     <% end %>
-  </p>
+  </div>
 
   <%= render 'shared/streak_dots', user: user, team: team %>
 
