--- a/app/views/shared/_user_record_streak_card.html.erb
+++ b/app/views/shared/_user_record_streak_card.html.erb
@@ -12,9 +12,9 @@
     <%= streak %>
     <span class="text-base font-normal text-soft"><%= 'day'.pluralize(streak) %></span>
   </p>
-  <p class="mt-1 mb-4 text-soft text-sm">
+  <div class="mt-1 mb-4">
     <% if streak.zero? %>
-      No record streak recorded.
+      <p class="text-soft-text-sm">No record streak recorded.</p>
     <% elsif start_date == end_date %>
       <div class="text-soft text-sm font-semibold inline-flex items-center gap-1">
         <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-3.5 shrink-0' %>
@@ -26,7 +26,7 @@
         <span class="whitespace-nowrap"><%= pretty_date(start_date, month_format: :short, include_year: Date.current.year != start_date.year) %> &ndash; <%= pretty_date(end_date, month_format: :short, include_year: Date.current.year != end_date.year) %></span>
       </div>
     <% end %>
-  </p>
+  </div>
 
   <div class="h-full flex flex-col justify-center">
     <div class="flex flex-wrap gap-1 items-center">
@@ -38,7 +38,7 @@
   </div>
 
   <% if end_date == Date.today || end_date == Date.yesterday %>
-    <p class="mt-1 text-soft text-sm">
+    <p class="mt-2 text-soft text-sm">
       <% if end_date == Date.today %>
         Run again tomorrow to extend your record streak!
       <% else %>
