--- a/app/views/pinned_pages/manage.html.erb
+++ b/app/views/pinned_pages/manage.html.erb
@@ -6,7 +6,7 @@
   data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
   data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
   data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
-  class="max-w-3xl mx-auto my-16"
+  class="max-w-4xl mx-auto my-16"
 >
   <div class="pb-6 mb-4 border-b border-slate-200 dark:border-slate-700">
     <div class="flex items-center justify-between">
@@ -23,23 +23,20 @@
       <% @pinned_pages.each do |page| %>
         <li
           data-id="<%= page.id %>"
-          class="flex items-center gap-1.5 px-1.5 max-sm:pl-1 py-0.5 sm:py-1 border rounded-lg bg-white dark:bg-slate-700/80 shadow dark:shadow-none dark:border-slate-700"
+          class="flex items-center gap-2"
         >
-          <div class="drag-handle p-1.5 cursor-grab shrink-0 max-sm:-mr-1">
-            <%= inline_svg_tag 'icons/drag-handle.svg', class: 'size-4 sm:size-5 text-soft' %>
-          </div>
-
-          <%= f.text_field "pinned_pages[#{page.id}][title]", value: page.title, placeholder: page.title, class: 'form-input' %>
-
-          <button type="button" data-action="mousedown->modal#open" data-modal-id="deletePage_<%= page.id %>" class="btn p-1.5 text-rose-600 dark:text-rose-500 hover:bg-rose-100 dark:hover:bg-rose-900/80 hover:text-rose-700 dark:hover:text-rose-300 shrink-0">
-            <%= inline_svg_tag 'icons/unpin.svg', class: 'size-4 sm:size-5' %>
+          <button type="button" data-action="mousedown->modal#open" data-modal-id="deletePage_<%= page.id %>" class="shrink-0 p-1 rounded-full bg-rose-600 hover:bg-rose-600/80 dark:hover:bg-rose-600/80 text-white transition duration-200 ease-in-out">
+            <%= inline_svg_tag 'icons/minus.svg', class: 'size-3.5' %>
             <span class="sr-only">Unpin shortcut</span>
           </button>
 
-          <%= link_to page.page_url, target: :_blank, class: 'btn btn-transparent p-1.5 shrink-0' do %>
-            <%= inline_svg_tag 'icons/external-link.svg', class: 'size-4 sm:size-5' %>
-            <span class="sr-only">View page</span>
-          <% end %>
+          <div class="grow flex items-center gap-1.5 p-0.5 sm:p-1 border rounded-lg bg-white dark:bg-slate-700/80 shadow dark:shadow-none dark:border-slate-700">
+            <%= f.text_field "pinned_pages[#{page.id}][title]", value: page.title, placeholder: page.title, class: 'form-input' %>
+
+            <div class="drag-handle cursor-grab shrink-0 p-1 pr-1.5 max-sm:-ml-1">
+              <%= inline_svg_tag 'icons/drag-handle.svg', class: 'size-4 sm:size-5 text-soft' %>
+            </div>
+          </div>
         </li>
       <% end %>
 
