--- a/app/views/teams/show/_rankings_table.html.erb
+++ b/app/views/teams/show/_rankings_table.html.erb
@@ -61,9 +61,9 @@
                 <%= link_to team_member_path(team, data[:member]), data: { turbo: false }, class: 'group flex gap-2 items-center mr-auto' do %>
                   <%= render 'shared/user_photo', user: data[:member], size: :thumb %>
 
-                  <div class="flex flex-col-reverse">
-                    <p class="transition duration-200 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= data[:member].default_name %></p>
-                    <%= content_tag(:p, data[:member] == current_user ? 'You' : 'Coach', class: 'help-text') if data[:member].owns?(team) || data[:member] == current_user %>
+                  <div>
+                    <%= content_tag(:p, data[:member] == current_user ? 'You' : 'Coach', class: 'help-text leading-none group-hover:text-indigo-600 dark:group-hover:text-indigo-500') if data[:member].owns?(team) || data[:member] == current_user %>
+                    <p class="transition duration-200 ease-in-out leading-none group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= data[:member].default_name %></p>
                   </div>
                 <% end %>
               </div>
