--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -30,10 +30,11 @@
         </div>
       <% end %>
     <% elsif @favorite_topics.blank? %>
-      <div class="flex flex-col items-center justify-center gap-6 mt-12">
-        <p class="text-soft text-center">There are no open topics.</p>
+      <div class="flex flex-col items-center justify-center my-24 md:my-32">
+        <p class="font-semibold">No topics</p>
+        <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">There are no open topics for this team.</p>
         <% if current_user.owns?(@team) %>
-          <button data-action="mousedown->modal#open" data-modal-id="newTopicModal" class="btn btn-primary">New topic</button>
+          <button data-action="mousedown->modal#open" data-modal-id="newTopicModal" class="btn btn-primary mt-6">New topic</button>
         <% end %>
       </div>
     <% end %>
