--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -13,10 +13,10 @@
       <%= link_to 'Create a team', new_team_path, class: 'btn btn-sm btn-primary btn-muted' if user_is_current %>
     </div>
   <% else %>
-    <div class="flex flex-col items-center justify-center gap-6 my-24 md:my-32">
+    <div class="flex flex-col items-center justify-center my-24 md:my-32">
       <p class="font-semibold">No teams</p>
       <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]"><%= user_is_current ? 'You don’t' : "#{user.first_name} doesn’t" %> have any teams.</p>
-      <%= link_to 'Create a team', new_team_path, class: 'mt-2 btn btn-primary' if user_is_current %>
+      <%= link_to 'Create a team', new_team_path, class: 'btn btn-primary mt-6' if user_is_current %>
     </div>
   <% end %>
 </div>
@@ -34,10 +34,10 @@
       <%= link_to 'Find a team to join', search_path, class: 'mt-2 btn btn-sm btn-white btn-muted' if user_is_current %>
     </div>
   <% else %>
-    <div class="flex flex-col items-center justify-center gap-6 my-24 md:my-32">
+    <div class="flex flex-col items-center justify-center my-24 md:my-32">
       <p class="font-semibold">No teams</p>
       <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]"><%= user_is_current ? 'You’re' : "#{user.first_name} is" %> not a member of any teams.</p>
-      <%= link_to 'Find a team', search_path, class: 'btn btn-white' if user_is_current %>
+      <%= link_to 'Find a team', search_path, class: 'btn btn-white mt-6' if user_is_current %>
     </div>
   <% end %>
 </div>
