--- a/app/assets/stylesheets/custom/buttons.css
+++ b/app/assets/stylesheets/custom/buttons.css
@@ -40,7 +40,7 @@
   }
 
   .btn-dark {
-    @apply bg-slate-800 text-white hover:bg-slate-900 focus:ring-slate-800/20;
+    @apply bg-gray-900 text-white hover:bg-gray-800 focus:ring-slate-800/20;
 
     &.btn-outline {
       @apply border border-slate-800 bg-transparent text-slate-800 hover:bg-slate-800 hover:text-white dark:border-slate-200 dark:text-slate-200 dark:hover:bg-slate-200 dark:hover:text-slate-800;
@@ -52,7 +52,7 @@
   }
 
   .btn-light {
-    @apply bg-slate-100 text-slate-800 hover:bg-slate-200 focus:ring-slate-100/20;
+    @apply bg-white text-slate-800 hover:bg-slate-200 focus:ring-slate-100/20;
 
     &.btn-outline {
       @apply border border-slate-300 bg-transparent text-slate-600 hover:bg-slate-100 dark:border-slate-600 dark:text-slate-300 dark:hover:bg-slate-700;
