--- a/app/views/teams/member/_member_info.html.erb
+++ b/app/views/teams/member/_member_info.html.erb
@@ -9,19 +9,12 @@
 
 <%= content_tag(:p, class: 'mb-2 text-right') { link_to "Edit your personal goals for #{team.name}", edit_team_team_membership_path(team, current_user), class: 'btn-link text-xs' } if member_is_current %>
 
-<div
-  data-controller="calendar"
-  data-calendar-hidden-class="calendar-close"
-  data-calendar-visible-class="calendar-open"
-  class="card mb-6"
->
+<div class="card mb-4">
   <div class="flex flex-wrap items-center justify-between gap-2 mb-6">
     <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300">Team Season Dates</h2>
-    <% if team.season_dates? %>
-      <button data-action="mousedown->calendar#toggleCalendar" class="btn btn-primary btn-muted btn-sm gap-1.5">
-        <%= inline_svg_tag 'icons/calendar.svg', class: 'size-4' %>
-        <span data-calendar-target="toggleButtonText">Calendar</span>
-      </button>
+    <%= link_to team_member_calendar_path(team, member), class: 'btn btn-sm btn-primary btn-muted gap-1.5' do %>
+      <%= inline_svg_tag 'icons/calendar.svg', class: 'size-3.5' %>
+      <span>View calendar</span>
     <% end %>
   </div>
   <% if team.season_dates? %>
@@ -47,79 +40,6 @@
       <%= render 'shared/progress_bar', percentage: team.season_progress, label: 'Season Progress', size: :lg %>
 
       <p class='my-1 text-xs text-soft'><%= team.season_over? ? 'Season is over.' : "#{pluralize(team.days_remaining_in_season, 'days')} remaining in season." %></p>
-
-      <div
-        data-calendar-target="calendarContainer"
-        class="grid grid-cols-1 lg:grid-cols-2 gap-4 transition-height"
-      >
-        <div class="col-span-1 lg:col-span-2">
-          <div class="flex flex-wrap items-center justify-center gap-3 mb-4 md:max-w-[80%] md:mx-auto">
-            <span class="py-1 px-4 text-sm rounded-lg bg-indigo-500 dark:bg-indigo-600 text-white shadow dark:shadow-none">
-              Today
-            </span>
-            <span class="py-1 px-4 text-sm rounded-lg bg-yellow-100 dark:bg-yellow-700/40 text-yellow-800 dark:text-yellow-400">
-              Long Run
-            </span>
-            <span class="py-1 px-4 text-sm rounded-lg bg-indigo-200/60 dark:bg-indigo-900/40 text-indigo-600 dark:text-indigo-500">
-              Run
-            </span>
-            <span class="py-1 px-4 text-sm rounded-lg text-soft bg-slate-200/30 dark:bg-slate-700/30">
-              No Runs
-            </span>
-            <span class="py-1 px-4 text-sm rounded-lg bg-slate-200/60 dark:bg-slate-700/60 opacity-40">
-              Excluded from Streak
-            </span>
-          </div>
-          <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
-            <% team.season_range.group_by { |date| date.beginning_of_month }.each_with_index do |(month, dates), index| %>
-              <div class="p-4 bg-white dark:bg-slate-700/40 shadow border border:slate-200 dark:border-slate-600 rounded-lg">
-                <h3 class="text-md font-semibold text-slate-700 dark:text-slate-300 mb-2"><%= month.strftime('%B %Y') %></h3>
-                <div class="grid grid-cols-7 gap-1.5 text-sm">
-
-                  <!-- Week days -->
-                  <% week_days = Date::DAYNAMES %>
-                  <% week_days = week_days.rotate(week_days.index(team.week_start.to_s.capitalize)) %>
-                  <% week_days.each do |day| %>
-                    <div class="font-semibold text-slate-700 dark:text-slate-300 text-center w-full"><%= day.first(3) %></div>
-                  <% end %>
-
-                  <!-- Calculates the start offset for the calendar grid based on the start of the month and the week start day. -->
-                  <!-- The start offset is the number of empty cells needed to align the first day of the month with the first day of the week. -->
-                  <!-- This ensures the calendar grid is properly aligned with the days of the week. -->
-                  <% start_of_month = month.beginning_of_month %>
-                  <% end_of_month = month.end_of_month %>
-                  <% week_start_index = Date::DAYNAMES.index(team.week_start.to_s.capitalize) %>
-                  <% start_offset = (start_of_month.wday - week_start_index + 7) % 7 %>
-                  <% start_offset.times do %>
-                    <div></div>
-                  <% end %>
-
-                  <% (start_of_month..end_of_month).each do |date| %>
-                    <div class="w-full h-8 aspect-square p-1 rounded-lg flex items-center justify-center
-                      <%= case
-                          when @long_runs_by_date[date].present?
-                            'bg-yellow-100 dark:bg-yellow-700/40 text-yellow-800 dark:text-yellow-400'
-                          when @runs_by_date[date].present?
-                            'bg-indigo-200/60 dark:bg-indigo-800/40 text-indigo-600 dark:text-indigo-500'
-                          when date == Date.current
-                            'bg-indigo-500 dark:bg-indigo-600 text-white shadow dark:shadow-none'
-                          when (date.saturday? && team.exclude_saturday_from_streak?) || (date.sunday? && team.exclude_sunday_from_streak?)
-                            'bg-slate-200/60 dark:bg-slate-700/60'
-                          else
-                            'bg-slate-200/30 dark:bg-slate-700/30'
-                          end %>
-
-                          <%= 'opacity-40' if team.exclude_date_from_streak?(date) %>
-                          ">
-                      <%= date.strftime('%e') %>
-                    </div>
-                  <% end %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
     <% end %>
   <% else %>
     <p class="text-soft">No season dates have been set for this team.</p>
