--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -5,45 +5,46 @@
 
 <%= content_tag(:p, class: 'mb-2 text-right') { link_to 'View your personal progress', team_member_path(team, current_user), class: 'btn-link text-xs' } if (@current_user_member_of_team && !@current_user_owns_team) || (@current_user_owns_team && team.include_coach?) %>
 
-<!-- Season Dates Card -->
-<div
-  data-controller="calendar"
-  data-calendar-hidden-class="calendar-close"
-  data-calendar-visible-class="calendar-open"
-  class="card mb-6"
->
-  <div class="flex flex-wrap items-center justify-between gap-2 mb-6">
-    <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300">Season Dates</h2>
-    <% if team.season_dates? && (team.season_in_progress? || team.season_over?) %>
-      <button data-action="mousedown->calendar#toggleCalendar" class="btn btn-primary btn-muted btn-sm gap-1.5">
-        <%= inline_svg_tag 'icons/calendar.svg', class: 'size-4' %>
-        <span data-calendar-target="toggleButtonText">Calendar</span>
-      </button>
+<div class="space-y-4">
+  <!-- Season Dates Card -->
+  <div class="card">
+    <div class="flex flex-wrap items-center justify-between gap-1.5 mb-6">
+      <h2 class="text-lg font-semibold">Season Dates</h2>
+      <% if @current_user_member_of_team %>
+        <%= link_to team_calendar_path(team), class: 'btn btn-sm btn-primary btn-muted gap-1.5' do %>
+          <%= inline_svg_tag 'icons/calendar.svg', class: 'size-3.5' %>
+          <span>View calendar</span>
+        <% end %>
+      <% end %>
+    </div>
+    <% if team.season_dates? %>
+      <div class="block mb-4 space-y-3 lg:space-y-0 lg:flex lg:flex-wrap lg:items-center lg:justify-around lg:gap-4">
+        <div class="lg:text-center">
+          <p class="text-soft text-sm leading-tight">Start Date</p>
+          <p class="text-2xl font-semibold leading-tight">
+            <%= pretty_date(team.season_start_date, month_format: :short, date_style: :absolute) %>
+          </p>
+        </div>
+
+        <div class="lg:text-center">
+          <p class="text-soft text-sm leading-tight">End Date</p>
+          <p class="text-2xl font-semibold leading-tight">
+            <%= pretty_date(team.season_end_date, month_format: :short, date_style: :absolute) %>
+          </p>
+        </div>
+      </div>
+
+      <% if team.season_not_started_yet? %>
+        <p class='my-1 text-soft'>Season hasn't started yet.</p>
+      <% else %>
+        <%= render 'shared/progress_bar', percentage: team.season_progress, label: 'Season Progress', size: :lg %>
+
+        <p class='my-1 text-xs text-soft'><%= team.season_over? ? 'Season is over.' : "#{pluralize(team.days_remaining_in_season, 'days')} remaining in season." %></p>
+      <% end %>
+    <% else %>
+      <p class="text-soft">No season dates have been set for this team.</p>
     <% end %>
   </div>
-  <% if team.season_dates? %>
-    <div class="block mb-4 space-y-3 lg:space-y-0 lg:flex lg:flex-wrap lg:items-center lg:justify-around lg:gap-4">
-      <div class="lg:text-center">
-        <p class="text-soft text-sm leading-tight">Start Date</p>
-        <p class="text-2xl font-semibold leading-tight">
-          <%= pretty_date(team.season_start_date, month_format: :short, date_style: :absolute) %>
-        </p>
-      </div>
-
-      <div class="lg:text-center">
-        <p class="text-soft text-sm leading-tight">End Date</p>
-        <p class="text-2xl font-semibold leading-tight">
-          <%= pretty_date(team.season_end_date, month_format: :short, date_style: :absolute) %>
-        </p>
-      </div>
-    </div>
-
-    <% if team.season_not_started_yet? %>
-      <p class='my-1 text-soft'>Season hasn't started yet.</p>
-    <% else %>
-      <%= render 'shared/progress_bar', percentage: team.season_progress, label: 'Season Progress', size: :lg %>
-
-      <p class='my-1 text-xs text-soft'><%= team.season_over? ? 'Season is over.' : "#{pluralize(team.days_remaining_in_season, 'days')} remaining in season." %></p>
 
       <div
         data-calendar-target="calendarContainer"
