--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -108,7 +108,7 @@
   }
 
   .modal-x-btn {
-    @apply absolute right-2 top-2 p-2 rounded-full opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2 hover:bg-slate-200 dark:hover:bg-slate-700;
+    @apply absolute right-2 top-2 p-2 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2 hover:bg-slate-200 dark:hover:bg-slate-700;
   }
 
   .card {
