--- a/app/assets/stylesheets/custom/forms.css
+++ b/app/assets/stylesheets/custom/forms.css
@@ -98,7 +98,7 @@
   }
 
   .error-message {
-    @apply text-red-800 dark:text-red-300 text-xs;
+    @apply text-rose-600 dark:text-rose-400 text-xs;
   }
 
   .valid-message {
