style(team_settings): remove quotation marks around "long run"

--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -39,7 +39,7 @@
 
     <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
       <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Long Runs</h2>
-      <p class="text-sm text-slate-600 dark:text-slate-400">Set the number of miles for a run to count as a "long run".</p>
+      <p class="text-sm text-slate-600 dark:text-slate-400">Set the number of miles for a run to count as a long run.</p>
     </div>
 
     <div class="form-group <%= team.require_gender? ? '' : 'hidden' %>" data-team-gender-fields-target="longRunMale">
