style(rankings): simplify gender option labels

--- a/app/views/teams/show/_rankings.html.erb
+++ b/app/views/teams/show/_rankings.html.erb
@@ -13,9 +13,9 @@
       <div class="flex flex-wrap items-center gap-x-2 gap-y-5 my-4">
         <% gender_options = [
           { name: 'All athletes', value: 'all' },
-          { name: 'Male athletes', value: 'male' },
-          { name: 'Female athletes', value: 'female' },
-          { name: 'Unspecified athletes', value: 'unspecified' },
+          { name: 'Male', value: 'male' },
+          { name: 'Female', value: 'female' },
+          { name: 'Unspecified', value: 'unspecified' },
         ] %>
 
         <% gender_options.each do |option| %>
