fix(calendar): change `@member` to `@user`

--- a/app/views/users/calendar.html.erb
+++ b/app/views/users/calendar.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "#{@member.default_name} Calendar" %>
+<% content_for :title, "#{@user.default_name} Calendar" %>
 
 <div
   data-controller="modal tabs"
